buggi adjustments, handle duplicates
